unpackaged/main/default/objects/ia_crm__Error_Log__c/fields/ia_crm__Class_Name__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Class_Name__c</fullName>
    <description>Store that store the name of the class where the exception has occurred.</description>
    <label>Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>