unpackaged/main/default/objects/ia_crm__Error_Log__c/fields/ia_crm__Error_Message__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Error_Message__c</fullName>
    <description>Store the exception error message.</description>
    <label>Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>