unpackaged/main/default/objects/ia_crm__Error_Log__c/fields/ia_crm__Error_Stack_Trace__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Error_Stack_Trace__c</fullName>
    <description>Store the Stack trace of the exeption.</description>
    <label>Error Stack Trace</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>