unpackaged/main/default/objects/ia_crm__Error_Log__c/fields/ia_crm__Is_Resolved__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Is_Resolved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Resolved</label>
    <type>Checkbox</type>
</CustomField>