unpackaged/main/default/objects/ia_crm__Error_Log__c/fields/ia_crm__Line_Number__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Line_Number__c</fullName>
    <description>Store the line number where the exception has occurred.</description>
    <label>Line Number</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>