unpackaged/main/default/objects/ia_crm__Error_Log__c/fields/ia_crm__Object_Name__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Object_Name__c</fullName>
    <label>Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>