unpackaged/main/default/objects/ia_crm__Error_Log__c/fields/ia_crm__Record_ID__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Record_ID__c</fullName>
    <label>Record ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>