unpackaged/main/default/objects/ia_crm__Error_Log__c/listViews/ia_crm__All.listView-meta.xml
<ListView>
    <fullName>ia_crm__All</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>ia_crm__Error_Message__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>ia_crm__Error_Stack_Trace__c</columns>
    <columns>ia_crm__Record_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>